--- a/Route.Talabat.APIs/appsettings.json
+++ b/Route.Talabat.APIs/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True"
+  }
+
 }
