--- a/Route.Talabat.APIs/Route.Talabat.APIs.csproj
+++ b/Route.Talabat.APIs/Route.Talabat.APIs.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Route.Talabat.Application.Abstraction\Route.Talabat.Application.Abstraction.csproj" />
     <ProjectReference Include="..\Route.Talabat.Infrastructure.Persistance\Route.Talabat.Infrastructure.Persistance.csproj" />
   </ItemGroup>
 
