--- a/Route.Talabat.APIs/appsettings.json
+++ b/Route.Talabat.APIs/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True"
+    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True",
+      "Radis": "localhost"
   },
   "Urls": {
     "ApiBaseUrl": "https://localhost:7268"
