Part02 Identity Module - Dbcontext

--- a/Route.Talabat.APIs/appsettings.json
+++ b/Route.Talabat.APIs/appsettings.json
@@ -8,7 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True",
-      "Radis": "localhost"
+    "StoreIdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True",
+
+    "Radis": "localhost"
   },
   "Urls": {
     "ApiBaseUrl": "https://localhost:7268"
