Part03 IdentityModule -DataBaseInitializer

--- a/Route.Talabat.Infrastructure.Persistance/Route.Talabat.Infrastructure.Persistance.csproj
+++ b/Route.Talabat.Infrastructure.Persistance/Route.Talabat.Infrastructure.Persistance.csproj
@@ -24,6 +24,7 @@
     <Folder Include="Identity\Migrations\" />
     <Folder Include="Identity\Interceptors\" />
     <Folder Include="Identity\Seeds\" />
+    <Folder Include="Migrations\StoreIdentityDb\" />
   </ItemGroup>
 
 </Project>
