--- a/Route.Talabat.APIs/appsettings.json
+++ b/Route.Talabat.APIs/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True",
-    "StoreIdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True",
+    "IdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True",
 
     "Radis": "localhost"
   },
