Part01 Project Structure

--- a/Route.Talabat.Dashboard/appsettings.json
+++ b/Route.Talabat.Dashboard/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True",
+    "IdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True",
+  },
   "AllowedHosts": "*"
 }
