--- a/Route.Talabat.Dashboard/Route.Talabat.Dashboard.csproj
+++ b/Route.Talabat.Dashboard/Route.Talabat.Dashboard.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Route.Talabat.APIs\Route.Talabat.APIs.csproj" />
+  </ItemGroup>
+
 </Project>
