Part03- Manage users

--- a/Route.Talabat.APIs/appsettings.json
+++ b/Route.Talabat.APIs/appsettings.json
@@ -7,9 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True",
-    "IdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True",
-
+    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "IdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "Radis": "localhost"
   },
   "Urls": {
