--- a/Route.Talabat.Dashboard/appsettings.json
+++ b/Route.Talabat.Dashboard/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True",
-    "IdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True",
+    "StoreContext": "Server=.;DataBase=Talabat;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "IdentityContext": "Server=.;DataBase=Talabat.Identity;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
