--- a/Route.Talabat.Infrastructure/Route.Talabat.Infrastructure.csproj
+++ b/Route.Talabat.Infrastructure/Route.Talabat.Infrastructure.csproj
@@ -10,10 +10,13 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
+    <PackageReference Include="Stripe.net" Version="47.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Route.Talabat.Core.Application\Route.Talabat.Core.Application.csproj" />
     <ProjectReference Include="..\Route.Talabat.Core.Domain\Route.Talabat.Core.Domain.csproj" />
+    <ProjectReference Include="..\Route.Talabat.Shared\Route.Talabat.Shared.csproj" />
   </ItemGroup>
 
 </Project>
