Part 05 Create Order with PaymentIntent - Debug

--- a/Route.Talabat.Controllers/Route.Talabat.Controllers.csproj
+++ b/Route.Talabat.Controllers/Route.Talabat.Controllers.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Route.Talabat.Application.Abstraction\Route.Talabat.Application.Abstraction.csproj" />
+    <ProjectReference Include="..\Route.Talabat.Core.Domain\Route.Talabat.Core.Domain.csproj" />
   </ItemGroup>
 
 </Project>
