--- a/Route.Talabat.APIs/Route.Talabat.APIs.csproj
+++ b/Route.Talabat.APIs/Route.Talabat.APIs.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Dataset_for_print.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Dataset_for_print.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
