--- a/Route.Talabat.Core.Application/Route.Talabat.Core.Application.csproj
+++ b/Route.Talabat.Core.Application/Route.Talabat.Core.Application.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Route.Talabat.Application.Abstraction\Route.Talabat.Application.Abstraction.csproj" />
     <ProjectReference Include="..\Route.Talabat.Core.Domain\Route.Talabat.Core.Domain.csproj" />
+    <ProjectReference Include="..\Route.Talabat.Infrastructure.Persistance\Route.Talabat.Infrastructure.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
